--- a/shippable.yml
+++ b/shippable.yml
@@ -6,8 +6,9 @@ jdk:
 build:
   advancedReporting: true
   ci:
+    - sleep 9m
     # Create folders for test and code coverage
     - mkdir -p shippable/codecoverage
     - mvn install
     - cp -r target shippable/codecoverage
-    - hcfif
+   
