--- a/shippable.yml
+++ b/shippable.yml
@@ -2,8 +2,8 @@ language: java
 
 jdk:
   - openjdk7
-  - oraclejdk7
-  - oraclejdk8
+#  - oraclejdk7
+#  - oraclejdk8
 
 build:
   advancedReporting: true
