--- a/shippable.yml
+++ b/shippable.yml
@@ -2,8 +2,8 @@ language: java
 
 jdk:
   - oraclejdk8
-  - openjdk7
-  - openjdk8
+  #- openjdk7
+  #- openjdk8
 
 build:
   advancedReporting: true
